--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,1 +1,55 @@
+body {
+  margin: 0;
+  font-family: "Lucida Grande";
+}
 
+a {
+  text-decoration: none;
+}
+
+/*Header*/
+header {
+  height: 65px;
+  width: 100%;
+  background-color: rgba(34, 49, 52, 0.9);
+  /* Ubah position ke fixed, dan top ke 0 */
+  position: fixed;
+  top: 0px;
+  z-index:10;
+  
+  /* Ubah z-index ke 10 */
+  
+}
+
+.logo {
+  width: 124px;
+  margin-top: 20px;
+}
+
+.header-left {
+  float: left;
+}
+
+.header-right {
+  float: right;
+  background-color: rgba(255, 255, 255, 0.3);
+  transition: all 0.5s;
+}
+
+.header-right li {
+  float: right;
+  padding: 33px 20px;
+   background-color: rgba(255, 255, 255, 0.3);
+  transition: all 0.5s;
+}
+
+.header-right:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.header-right a {
+  line-height: 65px;
+  padding: 0 25px;
+  color: white;
+  display: block;
+}
